Add report Specifications and search support
Controller: add optional 'search' request param and forward it to the service.
Repository: replace many custom finder methods with JpaSpecificationExecutor in ReportRepository to enable specification-based queries.
New: add ReportSpecifications with hasType, statusNot and titleContains predicates (including case-insensitive title search).
Service: change getReports to accept (type, search), build a combined Specification (exclude DELETED, filter by type and title) and use reportRepository.findAll(spec) to produce the DTO list; cleaned up imports and stream collection.
Enables flexible filtering and title search across reports while removing redundant repository methods.